Issue #SB-15472 Course Dashboard: User count is overlapping with portal footer

--- a/src/app/client/src/assets/styles/global.scss
+++ b/src/app/client/src/assets/styles/global.scss
@@ -29,21 +29,21 @@ body {
 @include respond-above (lg){
   body{
     .footer-fix {
-      padding-bottom: $base-block-space * 7;
+      padding-bottom: 56px;
     }
   }
 }
 @include respond-between (md, lg){
   body{
     .footer-fix {
-      padding-bottom: $base-block-space * 8;
+      padding-bottom: 64px;
     }
   }
 }
 @include respond-between (sm, md){
   body{
     .footer-fix {
-      padding-bottom: $base-block-space * 14;
+      padding-bottom: 112px;
     }
   }
 }
